<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Buscar_Horario_Profesor">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButtonMenu"
                    style="@style/imgColor"
                    android:layout_width="51dp"
                    android:layout_height="41dp"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@mipmap/menu"
                    tools:ignore="TouchTargetSizeCheck" />

                <Button
                    android:id="@+id/volver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/atras" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="Selecciona un profesor"
           />
            <Spinner
                android:id="@+id/listaProfesores"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/aceptar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Aceptar" />
        </androidx.appcompat.widget.LinearLayoutCompat>

            <!-- Tabla de horario -->
            <TableLayout
                android:id="@+id/tablaHorario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*">

                <!-- Encabezado de la tabla -->
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/darker_gray"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/hora"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/darker_gray"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/lunes"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/darker_gray"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/martes"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/darker_gray"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/miercoles"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/darker_gray"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/jueves"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/darker_gray"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/viernes"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/darker_gray"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/sabado"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/darker_gray"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/domingo"
                        android:textColor="@android:color/white" />
                </TableRow>
            </TableLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="Leyenda"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TableLayout
                android:id="@+id/tablaLeyenda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*">
            </TableLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/menu_header"
        app:menu="@menu/navigation_menu" />

</androidx.drawerlayout.widget.DrawerLayout>
